--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     
                 <label for="Email">Email :</label>
                 <input  type="Email"  placeholder="Enter Email" id="Name">
-                <label for="Passward">Passward :</label>
-                <input  type="password"  placeholder="Enter Passward" id="Passward">
-                <a  href="#" id="passward">Forgot passward ?</a>
+                <label for="Passward">Password :</label>
+                <input  type="password"  placeholder="Enter Password" id="Passward">
+                <a  href="#" id="passward">Forgot password ?</a>
           
                 <div >
                     <button class="Login-Button" href="index2.html">Login</button>
